--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,34 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+} 
+        
 body {
-    background-color: ghostwhite;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    justify-content: center;
+    background-color: goldenrod;
 }
+
+ #logo {
+    width: 600px;
+    height: 300px;
+    margin-top: 40px;
+ }
+
+ #registration {
+    background-color: bisque;
+    padding: 10px;
+ }
+
+ #welcome {
+    display: grid;
+    justify-items: center;
+    padding: 30px;
+ }
+
+ .class {
+    color: red;
+ }
