--- a/client/style.css
+++ b/client/style.css
@@ -7,17 +7,23 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100vh;
-    display: grid;
-    justify-content: center;
+    /* display: grid;
+    justify-content: center; */
     background-color: goldenrod;
 }
 
-#logo {
+#logo img {
     width: 600px;
     height: 300px;
     margin-top: 40px;
     padding: 10px;
     border: 2px solid brown;
+}
+
+#logopiccolo img {
+    width: 200px;
+    height: 100px;
+    justify-self: left;
 }
 
 .registrationorlogin {
@@ -32,11 +38,12 @@ body {
     padding: 30px;
 }
 
-/* #logopiccoletto {
-    width: 200px;
-    height: 150px;
-    justify-self: left;
-} */
+#pict {
+    width: 100px;
+    height: 125px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
 
 .error {
     color: red;
