--- a/client/style.css
+++ b/client/style.css
@@ -12,7 +12,7 @@ body {
     background-color: goldenrod;
 }
 
-#logo img {
+.logo img {
     width: 600px;
     height: 300px;
     margin-top: 40px;
@@ -20,13 +20,13 @@ body {
     border: 2px solid brown;
 }
 
-#logopiccolo img {
+/* #logopiccolo img {
     width: 200px;
     height: 100px;
     justify-self: left;
-}
+} */
 
-.registrationorlogin {
+.registrationorloginorreset {
     background-color: bisque;
     padding: 10px;
     border: 2px solid brown;
