--- a/client/style.css
+++ b/client/style.css
@@ -6,10 +6,17 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     /* display: grid;
     justify-content: center; */
+    overflow-y: scroll;
+    overflow-x: hidden;
     background-color: goldenrod;
+}
+
+button {
+    background-color: white;
+    border: solid 1px brown;
 }
 
 .logo img {
@@ -19,12 +26,6 @@ body {
     padding: 10px;
     border: 2px solid brown;
 }
-
-/* #logopiccolo img {
-    width: 200px;
-    height: 100px;
-    justify-self: left;
-} */
 
 .registrationorloginorreset {
     background-color: bisque;
@@ -38,11 +39,51 @@ body {
     padding: 30px;
 }
 
-#pict {
+.profpic {
+    width: 100%;
+    height: 230px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 60px;
+}
+
+.logopiccolo img {
+    width: 200px;
+    height: 100px;
+    padding: 4px;
+    border: 2px solid brown;
+}
+
+.pic {
+    width: 300px;
+}
+
+.pic img {
     width: 100px;
     height: 125px;
-    margin-top: 10px;
-    margin-right: 10px;
+    border-radius: 50%; 
+}
+
+.uploader {
+    padding: 10px;
+    border: solid 2px brown;
+}
+
+.profilebig {
+    padding-left: 40px;
+    padding-bottom: 40px;
+}
+
+.profilebig img {
+    width: 200px;
+    height: 250px;
+    border-radius: 50%;
+    padding: 20px;
+}
+
+.findpeople {
+    padding: 40px;
 }
 
 .error {
