Add a bit of part 6

--- a/client/style.css
+++ b/client/style.css
@@ -89,3 +89,27 @@ button {
 .error {
     color: red;
 }
+
+.lastThree {
+    display: flex;
+    flex-direction: column;
+    padding: 60px;
+}
+
+.utente {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 200px;
+    padding: 30px;
+}
+
+.utente img {
+    width: 150px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.utente h3 {
+    align-self: center;
+}
