creating FriendButton component

--- a/client/style.css
+++ b/client/style.css
@@ -14,6 +14,14 @@ body {
     background-color: goldenrod;
 }
 
+
+/* ---------------------------------
+                LOGIN
+----------------------------------- */
+
+/* ---------------------------------
+                REGISTRATION
+----------------------------------- */
 button {
     background-color: white;
     border: solid 1px brown;
