--- a/client/style.css
+++ b/client/style.css
@@ -6,25 +6,31 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    /* height: 100vh; */
-    /* display: grid;
-    justify-content: center; */
     overflow-y: scroll;
     overflow-x: hidden;
     background-color: goldenrod;
 }
 
 
-/* ---------------------------------
-                LOGIN
------------------------------------ */
-
-/* ---------------------------------
-                REGISTRATION
------------------------------------ */
+/* every button the same style */
 button {
     background-color: white;
     border: solid 1px brown;
+    margin: 3px;
+}
+
+/* every error message the same style */
+.error {
+    color: red;
+}
+
+
+/* WELCOME PAGES : LOGIN REGISTRATION RESET */
+
+.welcome {
+    display: grid;
+    justify-items: center;
+    padding: 30px;
 }
 
 .logo img {
@@ -41,42 +47,48 @@ button {
     border: 2px solid brown;
 }
 
-.welcome {
-    display: grid;
-    justify-items: center;
-    padding: 30px;
-}
 
-.profpic {
+/* LOGGEDIN EXPERIENCE */
+
+/* header */
+
+.header {
     width: 100%;
     height: 230px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 60px;
+    padding: 50px;
 }
 
 .logopiccolo img {
-    width: 200px;
-    height: 100px;
+    width: 225px;
+    height: 125px;
     padding: 4px;
     border: 2px solid brown;
 }
 
-.pic {
+.nav {
     width: 300px;
+}
+
+.pic {
+    display: flex;
 }
 
 .pic img {
     width: 100px;
     height: 125px;
     border-radius: 50%; 
+    border-right: 80px;
 }
 
+/* little popup in order to upload the profilepic */
 .uploader {
     padding: 10px;
     border: solid 2px brown;
 }
+
 
 .profilebig {
     padding-left: 40px;
@@ -94,9 +106,7 @@ button {
     padding: 40px;
 }
 
-.error {
-    color: red;
-}
+
 
 .lastThree {
     display: flex;
