--- a/client/style.css
+++ b/client/style.css
@@ -77,6 +77,7 @@ button {
     height: 125px;
     border-radius: 50%; 
     border-right: 80px;
+    cursor: pointer;
 }
 
 /* little popup in order to upload the profilepic */
@@ -97,6 +98,7 @@ button {
     height: 250px;
     border-radius: 50%;
     padding: 20px;
+    cursor: pointer;
 }
 
 /* find people and friends component */
